:wrench: fixed alignment issues

--- a/utils/css/bingo.css
+++ b/utils/css/bingo.css
@@ -21,6 +21,7 @@ body {
     color: var(--color-body);
     font-family: var(--font-base), sans-serif;
     width: 100vw;
+    background-size: auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
